tests/errors/type_check/declaration/validate_undeclared_type_inside_fn_type.sim
fn f(g: fn(Nope)) { entry: return }