tests/errors/type_check/declaration/validate_undeclared_type_inside_fn_type.err.expected
error: at 1:6: [TC-InvalidDeclaredType] In function 'f', parameter 'g': Use of undeclared type 'Nope'
   |
 1 | fn f(g: fn(Nope)) { entry: return }
   |      ^^^^^^^^^^^
